--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <!-- style css -->
   <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | NFT preview card component</title>
+  <title>Frontend Nikvan | NFT preview card component</title>
 </head>
 
 <body>
